[package]
name = "heat-exchanger"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <laura@laurademkowiczduffy.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bollard = "0.8"
reqwest = { version = "0.10.8", features = ["blocking"] }
serde_yaml = "0.8.13"
serde_json = "1.0.57"
serde = "1.0.116"
env_logger = "0.7.1"
log = "0.4.0"
humantime-serde = "1.0.1"
tokio = { version = "0.2.22", features = ["full"] }
